; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_common.c_fm10k_get_pcie_msix_count_generic.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_common.c_fm10k_get_pcie_msix_count_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fm10k_hw = type { i32 }

@FM10K_PCI_MSIX_MSG_CTRL = common dso_local global i32 0, align 4
@FM10K_PCI_MSIX_MSG_CTRL_TBL_SZ_MASK = common dso_local global i32 0, align 4
@FM10K_MAX_MSIX_VECTORS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fm10k_hw*)* @fm10k_get_pcie_msix_count_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fm10k_get_pcie_msix_count_generic(%struct.fm10k_hw* %0) #0 {
  %2 = alloca %struct.fm10k_hw*, align 8
  %3 = alloca i32, align 4
  store %struct.fm10k_hw* %0, %struct.fm10k_hw** %2, align 8
  %4 = load %struct.fm10k_hw*, %struct.fm10k_hw** %2, align 8
  %5 = load i32, i32* @FM10K_PCI_MSIX_MSG_CTRL, align 4
  %6 = call i32 @fm10k_read_pci_cfg_word(%struct.fm10k_hw* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @FM10K_PCI_MSIX_MSG_CTRL_TBL_SZ_MASK, align 4
  %8 = load i32, i32* %3, align 4
  %9 = and i32 %8, %7
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @FM10K_MAX_MSIX_VECTORS, align 4
  %14 = icmp sgt i32 %12, %13
  br i1 %14, label %15, label %17

15:                                               ; preds = %1
  %16 = load i32, i32* @FM10K_MAX_MSIX_VECTORS, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %15, %1
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @fm10k_read_pci_cfg_word(%struct.fm10k_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
